# Farey

./: .gitignore  Farey.cabal  LICENSE  stack.yaml
src/: BinaryTrees.hs  Farey.hs  FordCircles.hs  Fractions.hs  JScript.hs  Matrix.hs  RationalTrees.hs  Rats.hs  View.hs  ViewCircles.hs  test.html  test2.html  tf3.html
