name:                Farey
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/banditpig/Farey#readme
license:             BSD3
license-file:        LICENSE
author:              banditpig
maintainer:          banditpig@gitcommit.co.uk
copyright:           2018 banditpig
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable Farey
  hs-source-dirs:      src
  main-is:             Farey.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5 , gloss 
  ghc-options:
        -O2
        -Wall
        -threaded
        -rtsopts